src/Parser/EXPR.g4
grammar EXPR;

prog:   expr EOF;

expr:   expr op=('*'|'/') expr      # MulDiv
    |   expr op=('+'|'-') expr      # AddSub
    |   INT                        # Int
    |   '(' expr ')'               # Parens
    ;

INT :   [0-9]+ ;
WS  :   [ \t\r\n]+ -> skip ;
